--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,7 +32,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.quickbirdstudios:opencv:3.4.1'
+    implementation project(':openCVLibrary310')
     implementation 'com.facebook.react:react-native:+'
 }
   
